hphp/hack/test/typecheck/new_inference/union_subtype_bad.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function test(int $x, string $y): vec<num> {
  return vec[$x, $y];
}
